--- a/translations/items+intl-icu.es.xlf
+++ b/translations/items+intl-icu.es.xlf
@@ -7243,7 +7243,7 @@
     <unit id="bj.MFsK" name="Expedition">
       <notes>
         <note category="german">Expedition</note>
-        <note category="from">db://ItemCategory</note>
+        <note category="from">[unused]</note>
       </notes>
       <segment>
         <source>Expedition</source>
@@ -7649,7 +7649,7 @@
     <unit id="TWuwK4M" name="Angriff und Verteidigung">
       <notes>
         <note category="german">Angriff und Verteidigung</note>
-        <note category="from">db://ItemCategory</note>
+        <note category="from">[unused]</note>
       </notes>
       <segment>
         <source>Angriff und Verteidigung</source>
@@ -7749,7 +7749,7 @@
     <unit id="47LA9aV" name="Pkte">
       <notes>
         <note category="german">Pkte</note>
-        <note category="from">twig:///templates/ajax/game/item_proto_tooltip.html.twig;twig:///templates/ajax/game/item_tooltip.html.twig</note>
+        <note category="from">twig:///templates/ajax/game/item_proto_tooltip.html.twig</note>
       </notes>
       <segment>
         <source>Pkte</source>
@@ -8149,7 +8149,7 @@
     <unit id="sGKanc7" name="Abstimmen">
       <notes>
         <note category="german">Abstimmen</note>
-        <note category="from">db://ItemAction</note>
+        <note category="from">[unused]</note>
       </notes>
       <segment>
         <source>Abstimmen</source>
@@ -8159,7 +8159,7 @@
     <unit id="Rrf3E_z" name="Vous avez voté pour {citizen} en tant que {role} !">
       <notes>
         <note category="german">Vous avez voté pour {citizen} en tant que {role} !</note>
-        <note category="from">db://ItemAction</note>
+        <note category="from">[unused]</note>
       </notes>
       <segment>
         <source>Vous avez voté pour {citizen} en tant que {role} !</source>
