--- a/translations/items+intl-icu.fr.xlf
+++ b/translations/items+intl-icu.fr.xlf
@@ -6987,7 +6987,7 @@
       <notes>
         <note category="german">Expedition</note>
         <note category="state">new</note>
-        <note category="from">db://ItemCategory</note>
+        <note category="from">[unused]</note>
       </notes>
       <segment>
         <source>Expedition</source>
@@ -7699,7 +7699,7 @@
     <unit id="47LA9aV" name="Pkte">
       <notes>
         <note category="german">Pkte</note>
-        <note category="from">twig:///templates/ajax/game/item_proto_tooltip.html.twig;twig:///templates/ajax/game/item_tooltip.html.twig</note>
+        <note category="from">twig:///templates/ajax/game/item_proto_tooltip.html.twig</note>
       </notes>
       <segment>
         <source>Pkte</source>
@@ -7719,7 +7719,7 @@
     <unit id="TWuwK4M" name="Angriff und Verteidigung">
       <notes>
         <note category="german">Angriff und Verteidigung</note>
-        <note category="from">db://ItemCategory</note>
+        <note category="from">[unused]</note>
       </notes>
       <segment>
         <source>Angriff und Verteidigung</source>
@@ -8069,7 +8069,7 @@
     <unit id="sGKanc7" name="Abstimmen">
       <notes>
         <note category="german">Abstimmen</note>
-        <note category="from">db://ItemAction</note>
+        <note category="from">[unused]</note>
       </notes>
       <segment>
         <source>Abstimmen</source>
@@ -8080,7 +8080,7 @@
       <notes>
         <note category="german">Vous avez voté pour {citizen} en tant que {role} !</note>
         <note category="state">new</note>
-        <note category="from">db://ItemAction</note>
+        <note category="from">[unused]</note>
       </notes>
       <segment>
         <source>Vous avez voté pour {citizen} en tant que {role} !</source>
