--- a/translations/season+intl-icu.fr.xlf
+++ b/translations/season+intl-icu.fr.xlf
@@ -14,7 +14,7 @@
     <unit id="MKuQjMi" name="Saison 0.13">
       <notes>
         <note category="german">Saison 0.13</note>
-        <note category="from">db://Season</note>
+        <note category="from">[unused]</note>
       </notes>
       <segment>
         <source>Saison 0.13</source>
@@ -94,7 +94,7 @@
     <unit id="VwuJDaU" name="Saison 0.1">
       <notes>
         <note category="german">Galgenvögel</note>
-        <note category="from">db://Season</note>
+        <note category="from">[unused]</note>
       </notes>
       <segment>
         <source>Saison 0.1</source>
@@ -105,7 +105,7 @@
       <notes>
         <note category="german">Saison 0.0</note>
         <note category="state">new</note>
-        <note category="from">db://Season</note>
+        <note category="from">[unused]</note>
       </notes>
       <segment>
         <source>Saison 0.0</source>
@@ -126,7 +126,7 @@
     <unit id="ZahwwoN" name="Saison 0.12">
       <notes>
         <note category="german">Saison 0.12</note>
-        <note category="from">db://Season</note>
+        <note category="from">[unused]</note>
       </notes>
       <segment>
         <source>Saison 0.12</source>
