--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -22965,7 +22965,7 @@
       </notes>
       <segment>
         <source>Nur ein einzelner Verrückter bewacht heute Nacht selbstmörderisch das Tor. Wünschen wir {citizens} einen schnellen Tod.</source>
-        <target>Nur ein einzelner Verrückter bewacht heute Nacht selbstmörderisch das Tor. Wünschen wir {citizens} einen schnellen Tod.</target>
+        <target>¡Solo hay valiente, {citizens}, en las puertas del pueblo! Esperamos su muerte sea rápida para que no sufra.</target>
       </segment>
     </unit>
     <unit id="X6hFtuv">
